[gd_scene load_steps=14 format=2]

[ext_resource path="res://BossDragon.gd" type="Script" id=1]
[ext_resource path="res://enemies/BossFight/Dragon/First.png" type="Texture" id=2]
[ext_resource path="res://enemies/BossFight/Dragon/Second.png" type="Texture" id=3]
[ext_resource path="res://enemies/BossFight/Dragon/Third.png" type="Texture" id=4]
[ext_resource path="res://Flames.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemies/BossFight/Dragon/ExclamationMark.png" type="Texture" id=6]
[ext_resource path="res://Died.tres" type="Animation" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "New Anim",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 35.6121

[sub_resource type="Animation" id=3]
resource_name = "Prepare"
length = 1.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0.7, 1.1, 1.3 ),
"transitions": PoolRealArray( 1, 1e+06, 1e-05 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7, 1.1, 1.3 ),
"transitions": PoolRealArray( 1, 66.2569, 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.3 ), Vector2( 0.7, 0.5 ), Vector2( 0.4, 0.3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.69, 1.11, 1.3 ),
"transitions": PoolRealArray( 1, 1e+06, 1e-05 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.7, 0.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../AnimatedSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Area2D/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "Steady"
length = 0.8
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("../AnimatedSprite:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.46, 0.78 ),
"transitions": PoolRealArray( 1, 3213.66, 0.0110486 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.364706, 0.0470588, 0.0470588, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 53.4684

[node name="BossDragon" type="KinematicBody2D"]
script = ExtResource( 1 )
Flame = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.12043, 33.1318 )
shape = SubResource( 2 )

[node name="PlayerFollower" type="RayCast2D" parent="."]
enabled = true

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 72.1629, -27.6179 )
scale = Vector2( 0.7, 0.5 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/Died = ExtResource( 7 )
anims/Prepare = SubResource( 3 )
anims/RESET = SubResource( 4 )
anims/Steady = SubResource( 5 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1.18919, 32.7032 )
shape = SubResource( 6 )

[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
